[package]
name = "atp_repo"
version = "0.1.0"
edition = "2021"
description= "Methods to access Data Repositories conforming to the AT Protocol's' repository specification"
license = "GPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
